# abucket

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
docs/: auth-and-file-ui.md  cache-design.md  design.md  oauth-notes.md
src/: config.rs  main.rs  mounts.rs  ui.html  ui.rs
src/drivers/: mod.rs  quark_open.rs  s3.rs  system_config.rs
src/mounts/: github_releases.rs  mod.rs  quark_open.rs  s3.rs  system_config.rs  url_tree.rs
